# DNA-replication

./: README.md
DNA_metropolis/: 3Dnucleusplot.py  README.md  centerplot.py  chromosome_patchlists.txt  chromosome_patchlists_inactiveX22.txt  color_nucleusplot.py  compile_nplot.txt  dist_hist.py  distoverdist.py  distplot.py  dna_metropolis.cpp  dna_metropolis.hh  file_meanings  flipfile.py  get_plotpoints.cpp  get_plotpoints.hh  main.cpp  main_random_loop.cpp  main_rl100.cpp  nucleusplot.py  paper_main.cpp  paper_main78alterna.cpp  plot_stacks.py  separate76.cpp
replication/: README.md  annihilation.cpp  annihilation.hh  boundary.cpp  boundary.hh  change_parameter.hh  chromatinType.txt  chromatin_type.hh  chromosome_patchlists_inactiveX.txt  exceptions.cpp  exceptions.hh  firing_test.cpp  fork.cpp  fork.hh  full_test.cpp  main.cpp  nwc_positions.txt  origin.hh  parameter_set.cpp  parameter_set.hh  replicator.cpp  replicator.hh  replicator_test.cpp  step_test.cpp  twoe.cpp  twoe.hh
simtools/: INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ltmain.sh  simtools.pc.in
simtools/autom4te.cache/: output.1  requests  traces.0  traces.1
simtools/src/: Makefile.am  Makefile.in  binary_heap.hh  binary_sum_search.hh  exceptions.cpp  exceptions.hh  growing_binary_search.hh  red_black_tree.hh  twoe.cpp  twoe.hh
simtools/tests/: bs_test.cpp  garbage_test.py  growing_test.cpp  heap_test.cpp  rb_iterator_test.cpp  rb_test.cpp  test_helpers.py  tests.py  tree_test.py
